backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
  namespace: garage
spec:
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
      - name: pitstop-customer-service
        image: sbihielahbib/pitstop-customer:20
        ports:
        - containerPort: 3001
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: pitstop-customer-service
  namespace: garage
spec:
  selector:
    app: customer
  ports:
  - protocol: TCP  # Corrected from "protocole"
    port: 3001
    targetPort: 3001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle-deployment
  namespace: garage
spec:
  selector:
    matchLabels:
      app: vehicle
  template:
    metadata:
      labels:
        app: vehicle
    spec:
      containers:
      - name: pitstop-vehicle-service
        image: sbihielahbib/pitstop-vehicle:2
        ports:
        - containerPort: 3002
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: pitstop-vehicle-service
  namespace: garage
spec:
  selector:
    app: vehicle
  ports:
  - protocol: TCP  
    port: 3002
    targetPort: 3002

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-deployment
  namespace: garage
spec:
  selector:
    matchLabels:
      app: workshop
  template:
    metadata:
      labels:
        app: workshop
    spec:
      containers:
      - name: pitstop-workshop-service
        image: sbihielahbib/pitstop-workshop:2
        ports:
        - containerPort: 3003
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: pitstop-workshop-service
  namespace: garage
spec:
  selector:
    app: workshop
  ports:
  - protocol: TCP  # Corrected from "protocole"
    port: 3003
    targetPort: 3003
