gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: garage
spec:
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: pitstop-express-gateway
        image: sbihielahbib/pitstop-gateway:2
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: garage
spec:
  selector:
    app: gateway
  ports:
  - port: 8080
    targetPort: 8080
