webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: garage
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: pitstop-webapp
        image: sbihielahbib/pitstop-webapp:2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: garage
spec:
  selector:
    app: webapp
  ports:
  - port: 8081
    targetPort: 8081
